Stopped horizontal scrolling.

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,8 @@ html,
 body {
   padding: 0;
   margin: 0;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 body {
